--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <span th:text="${message}"></span>
 </div>
 
-<form th:action="@{/custom-login}" method="post">
+<form th:action="@{/login}" method="post">
     <input type="text" name="username" placeholder="Username" required>
     <input type="password" name="password" placeholder="Password" required>
     <button type="submit">Sign In</button>
