--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -5,5 +5,17 @@
 </head>
 <body>
 <h1>Hello, <span th:text="${username}"></span>!</h1>
+
+<!-- Форма для загрузки файла -->
+<form th:action="@{/upload}" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" required />
+    <button type="submit">Upload File</button>
+</form>
+
+<!-- Показать ссылку на скачивание, если есть -->
+<div th:if="${link}">
+    <p>Download your file here: <a th:href="${link}" th:text="${link}"></a></p>
+</div>
+
 </body>
 </html>
