--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,20 +2,28 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/login.css">
 </head>
 <body>
-<div th:if="${error}" class="alert alert-error">
-    <span th:text="${error}"></span>
+
+<div class="login-container">
+    <h2>Sign In</h2>
+
+    <div th:if="${error}" class="alert alert-error">
+        <span th:text="${error}"></span>
+    </div>
+
+    <div th:if="${message}" class="alert alert-success">
+        <span th:text="${message}"></span>
+    </div>
+
+    <form th:action="@{/login}" method="post" class="login-form">
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit">Sign In</button>
+    </form>
 </div>
 
-<div th:if="${message}" class="alert alert-success">
-    <span th:text="${message}"></span>
-</div>
-
-<form th:action="@{/login}" method="post">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <button type="submit">Sign In</button>
-</form>
 </body>
 </html>
