--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,13 +4,14 @@
     <title>Login</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/login.css">
+    <script src="/login.js" defer></script>
 </head>
 <body>
 
 <div class="login-container">
     <h2>Sign In</h2>
 
-    <div th:if="${error}" class="alert alert-error">
+    <div id="server-error" th:if="${error}" class="alert alert-error">
         <span th:text="${error}"></span>
     </div>
 
@@ -18,12 +19,15 @@
         <span th:text="${message}"></span>
     </div>
 
-    <form th:action="@{/login}" method="post" class="login-form">
+    <div id="client-error" class="alert alert-inputerr" style="display:none"></div>
+
+    <form th:action="@{/login}" method="post" class="login-form" novalidate>
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Sign In</button>
+        <button type="submit">Continue</button>
     </form>
 </div>
+
 
 </body>
 </html>
